<resources>
    <string name="app_name">Moovi</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="calendar">Calendar</string>
    <string name="reservations">Reservations</string>
    <string name="home">Home</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">Users</string>
</resources>
